refactor: use ConcurrentHashMap in MapState for thread safety and O(1) lookups
Truck and warehouse collections were ArrayList with O(n) lookups.
Now use ConcurrentHashMap keyed by UUID: lookups, inserts and deletes
are O(1) and safe under concurrent RabbitMQ listener threads.