@@ -3,69 +3,52 @@ package com.gft.simulation.map.internal.domain;
 import com.gft.simulation.map.internal.domain.exceptions.TruckAlreadyRegisteredException;
 import com.gft.simulation.map.internal.domain.exceptions.TruckNotFoundException;
 import com.gft.simulation.map.internal.domain.exceptions.WarehouseAlreadyRegisteredException;
-import lombok.Getter;
-import lombok.NoArgsConstructor;
 
-import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
+import java.util.Map;
 import java.util.UUID;
+import java.util.concurrent.ConcurrentHashMap;
 
-@Getter
-@NoArgsConstructor
 public class MapState {
-    List<TruckPosition> trucks = new ArrayList<>();
-    List<WarehousePosition> warehouses = new ArrayList<>();
+    Map<UUID, TruckPosition> trucks = new ConcurrentHashMap<>();
+    Map<UUID, WarehousePosition> warehouses = new ConcurrentHashMap<>();
 
     public void registerTruck(UUID truckId, Location location) {
-        if (isTruckAlreadyRegistered(truckId))
+        if (trucks.containsKey(truckId))
             throw new TruckAlreadyRegisteredException(truckId);
-        trucks.add(new TruckPosition(truckId, location));
+        trucks.put(truckId, new TruckPosition(truckId, location));
     }
 
     public void updateTruckPosition(UUID truckId, Location location) {
-        TruckPosition existingTruckPosition = findTruckOrThrow(truckId);
-        existingTruckPosition.updateLocation(location);
+        TruckPosition existing = trucks.get(truckId);
+        if (existing == null) throw new TruckNotFoundException(truckId);
+        existing.updateLocation(location);
+    }
+
+    public void deleteTruck(UUID truckId) {
+        if (trucks.remove(truckId) == null)
+            throw new TruckNotFoundException(truckId);
     }
 
     public void registerWarehouse(UUID warehouseId, String name, Location location, WarehouseType warehouseType) {
-        if (isWarehouseAlreadyRegistered(warehouseId))
+        if (warehouses.containsKey(warehouseId))
             throw new WarehouseAlreadyRegisteredException(warehouseId);
-        warehouses.add(new WarehousePosition(warehouseId, name, location, warehouseType));
+        warehouses.put(warehouseId, new WarehousePosition(warehouseId, name, location, warehouseType));
     }
 
     public List<TruckPosition> getTrucks() {
-        return Collections.unmodifiableList(trucks);
+        return List.copyOf(trucks.values());
     }
 
     public List<WarehousePosition> getWarehouses() {
-        return Collections.unmodifiableList(warehouses);
-    }
-
-    private boolean isTruckAlreadyRegistered(UUID truckId) {
-        return trucks.stream().anyMatch(t -> t.getTruckId().equals(truckId));
-    }
-
-    private boolean isWarehouseAlreadyRegistered(UUID warehouseId) {
-        return warehouses.stream().anyMatch(w -> w.getWarehouseId().equals(warehouseId));
-    }
-
-    private TruckPosition findTruckOrThrow(UUID truckId) {
-        return trucks.stream()
-                .filter(t -> t.getTruckId().equals(truckId))
-                .findFirst()
-                .orElseThrow(() -> new TruckNotFoundException(truckId));
+        return List.copyOf(warehouses.values());
     }
 
     public static MapState restoreFromPersistence(List<TruckPosition> trucks, List<WarehousePosition> warehouses) {
         MapState mapState = new MapState();
-        mapState.trucks.addAll(trucks);
-        mapState.warehouses.addAll(warehouses);
+        trucks.forEach(t -> mapState.trucks.put(t.getTruckId(), t));
+        warehouses.forEach(w -> mapState.warehouses.put(w.getWarehouseId(), w));
         return mapState;
     }
 
-    public void deleteTruck(UUID truckId){
-        TruckPosition truckToDelete = findTruckOrThrow(truckId);
-        this.trucks.remove(truckToDelete);
-    }
 }
